# Smart-Shelves

./: .gitignore  DESKTOP_BUILD.md  FILE_MANIFEST.md  HEX_COMMAND_REFERENCE.md  IMPLEMENTATION_COMPLETE.md  README.md  README_IOT_CONTROLLER.md  RUNNING.md  SETUP.md  SUBSCRIPTION_IMPLEMENTATION.md  TCP_IP_IMPLEMENTATION.md  TCP_IP_QUICK_START.md  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/icons/: .gitkeep  create_icons.sh  icon.icns
frontend/src-tauri/resources/: README.md
frontend/src-tauri/resources/php-server/: init-database.bat  init-database.sh  start-server.bat  start-server.sh
frontend/src-tauri/resources/php-server/app/Http/: Kernel.php
frontend/src-tauri/resources/php-server/app/Models/: Cabinet.php  Document.php  Plan.php  Room.php  Shelf.php  User.php
frontend/src-tauri/resources/php-server/app/Policies/: CabinetPolicy.php
frontend/src-tauri/resources/php-server/app/Providers/: AppServiceProvider.php
frontend/src-tauri/resources/php-server/app/Services/: SensitiveCabinetNotificationService.php  SubscriptionService.php
frontend/src-tauri/resources/php-server/config/: app.php
frontend/src-tauri/resources/php-server/database/: database.sqlite
frontend/src-tauri/resources/php-server/database/migrations/: 2024_01_01_000001_create_users_table.php  2024_01_01_000002_create_rooms_table.php  2024_01_01_000003_create_shelves_table.php  2024_01_01_000004_create_user_rooms_table.php  (+9 more)
frontend/src-tauri/resources/php-server/routes/: api.php
frontend/src-tauri/src/: main.rs
(+137 files in other folders)
