[package]
name = "smart-shelves-frontend"
version = "1.0.0"
description = "Smart Shelves Desktop Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }


[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "http-all", "dialog" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

